--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,5 +1,5 @@
 
-foo = foo version 3 hello spring
+foo = foo version 11 hello spring cloud
 democonfigclient.message=hello spring io
 
 # routes to serviceId
