--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,5 +1,5 @@
 
-foo = foo version 33 hello spring cloud
+foo = hello spring cloud
 democonfigclient.message=hello spring io
 
 # routes to serviceId
